--- a/package.json
+++ b/package.json
@@ -1,55 +1,29 @@
 {
-  "name": "farmn",
+  "name": "<my-app>",
   "version": "1.0.0",
-  "description": "My awesome full-stack web application",
-  "main": "server/src/index.ts",
+  "description": "My awesome web application",
+  "main": "src/index.tsx",
   "scripts": {
-    "start": "concurrently \"webpack serve --config webpack.config.js --mode development --hot --open\" \"nodemon ./server/src/index.ts\" \"npm run mongo-start\"",
-    "mongo-start": "mongod --dbpath=/Users/brandonhadler/mongodb-data",
+    "start": "concurrently \"webpack serve --config webpack.config.js --mode development --hot --open\"",
     "build": "webpack --mode production",
     "test": "echo \"No tests yet\" && exit 0",
     "lint": "eslint src/**/*.{ts,tsx} --quiet",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix"
   },
   "keywords": [
-    "full-stack",
     "web application",
     "React",
-    "Express",
     "Webpack",
     "TypeScript"
   ],
   "author": "Conker",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/lab": "^5.0.0-alpha.124",
-    "@mui/material": "^5.11.14",
-    "@mui/x-date-pickers": "^6.0.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "dayjs": "^1.11.7",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "material-ui-popup-state": "^5.0.5",
-    "mongodb": "^5.0.1",
-    "mongoose": "^6.9.1",
-    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-use": "^17.4.0",
-    "sharp": "^0.31.3",
-    "socket.io": "^4.6.0",
-    "validator": "^13.9.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.17.17",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.13",
@@ -60,15 +34,11 @@
     "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "nodemon": "^2.0.20",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
-    "prettier": "^2.8.4",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.6",
     "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
